- changes in conf to use in-memory db - add admin panel for Admins and Vets - add Authentication module for the panel without restrictions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,6 +2,9 @@
 # ~~~~~
 application.name=pet hospital
 
+# Import the secure module
+module.secure=${play.path}/modules/secure
+
 # Application mode
 # ~~~~~
 # Set to dev to enable instant reloading and other development help.
@@ -82,7 +85,7 @@ date.format=yyyy-MM-dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-# db=mem
+ db=mem
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
@@ -95,10 +98,10 @@ date.format=yyyy-MM-dd
 # db.driver=org.postgresql.Driver
 # db.user=root
 # db.pass=secret
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/test
-db.user=root
-db.pass=sertug
+# db.driver=com.mysql.jdbc.Driver
+# db.url=jdbc:mysql://localhost:3306/test
+# db.user=root
+# db.pass=sertug
 #
 # Connections pool configuration :
 # db.pool.timeout=1000
@@ -218,4 +221,5 @@ mail.smtp=mock
 %test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 %test.jpa.ddl=create
 %test.mail.smtp=mock
+
 
